[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Romanium/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/Romanium/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Romanium/Level.gd" type="Script" id=3]
[ext_resource path="res://addons/SyndiBox/syndibox.gd" type="Script" id=4]
[ext_resource path="res://addons/SyndiBox/icon.png" type="Texture" id=5]
[ext_resource path="res://addons/SyndiBox/Assets/TextDefault.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/Montserrat-SemiBold.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="Game" type="ViewportContainer"]
margin_right = 2369.0
margin_bottom = 1069.0
stretch = true
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 800, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="GUI" parent="Viewport" instance=ExtResource( 2 )]

[node name="Level" type="Node" parent="Viewport"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="Viewport"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Viewport/Control"]
visible = false
margin_left = 1231.0
margin_top = 23.0
margin_right = 1254.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "tv1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SyndiBox" type="ReferenceRect" parent="Viewport/Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
FONT = ExtResource( 6 )
CUSTOM_EFFECTS = "res://addons/SyndiBox/custom.gd"

[node name="FadeInTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="FadeOutTimer" type="Timer" parent="."]
wait_time = 0.01

[connection signal="on_fade_complete" from="." to="Viewport/Level" method="_on_Game_on_fade_complete"]
[connection signal="position_changed" from="Viewport/GUI" to="Viewport/Level" method="_on_GUI_position_changed"]
[connection signal="timeout" from="FadeInTimer" to="." method="_on_FadeInTimer_timeout"]
[connection signal="timeout" from="FadeOutTimer" to="." method="_on_FadeOutTimer_timeout"]
